# RootReader

./: BatchedTransformation.cc  Branch.h  CMakeLists.txt  ClassificationWeights.cc  FindTensorFlow.cmake  README.md  Resampler.cc  RootReader.cc  RootWriter.cc  TrainTestSplitting.cc  deepFlavour.py  evalGraph.cc  evaluate.py  llp_model.py  llp_model_simple.py  model.py  plotLoss.py  plotRoc.py  root_reader.py  root_writer.py  save_tf.py  test.py  test2.py  train_test_splitter.py  training.py  training_keras.py  training_keras_simple.py  training_tf.py
